apps/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nowait-api-service
  namespace: nowait-dev
  labels:
    app: nowait-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nowait-api
