apps/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nowait-api-ingress
  namespace: nowait-dev
  annotations:
    # 인그레스 클래스를 필수 지정 (AWS LBC 감지용)
    kubernetes.io/ingress.class: alb
    
    # 인터넷에 노출되는 Public ALB 생성 설정
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    # EKS 내에서 Pod IP로 직접 트래픽을 라우팅하여 성능 최적화 (Target Type: IP)
    alb.ingress.kubernetes.io/target-type: ip
    
    # 타겟 그룹 헬스체크 설정 경로 (Nginx 기본 메인 페이지 타겟)
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    # terraform apply 후 public subnet ID 확정되면 주석 해제 후 입력
    # alb.ingress.kubernetes.io/subnets: subnet-xxxx, subnet-xxxx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nowait-api-service
            port:
              number: 80
